# Agent.TV

./: .env  .env.example  .gitignore  AGENTTV_DELIVERY_SUMMARY.md  AGENTTV_ROADMAP.md  AGENTTV_SETUP.md  AMP_AUDIT_REPORT.md  Anchor.toml  BLOCKERS_INDEX.md  BLOCKERS_RESOLUTION.md  BLOCKERS_STATUS.txt  BUILD_COMPLETE.md  BUILD_SUMMARY.md  CHECKLIST.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_ANALYSIS.md  COMPLETION_REPORT_DYNAMIC_ORACLE.txt  COMPLETION_STATUS.md  COMPLETION_SUMMARY.txt  DATABASE_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_CLEANUP.md  E2E_AUDIT_REPORT.md  FILES_MANIFEST.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS_ALL_BLOCKERS.md  FINAL_SUMMARY.md  GET_GROQ_API_KEY.sh  PHASES_COMPLETE.md  PHASE_COMPLETION_GUIDE.md  PROJECT_BREAKDOWN.md  PROJECT_STATUS.md  PUSH_COMPLETE.md  QUICK_DEPLOY.sh  QUICK_REF.md  QUICK_START_DYNAMIC_ORACLE.md  README.md  (+10 more)
docs/archive/: BLOCKERS_PROGRESS.md  COMPLETION_STRATEGY.md  COMPREHENSIVE_AUDIT.md  DOCUMENTATION_INDEX.md  DYNAMIC_ORACLE_IMPLEMENTATION_SUMMARY.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_COMPLETE_GUIDE.md  IMPLEMENTATION_ROADMAP.md  README.md  READ_ME_FIRST.md  SESSION_SUMMARY_FEB11.md
programs/agent-tv-voting/: Cargo.toml
programs/agent-tv-voting/src/: lib.rs
src/: config.js  index.js
src/agents/: base-agent.js  llm-provider.js  orchestrator.js  researcher.js  scriptor.js  streamer.js  video-gen.js
src/db/: index.js  migrate.js
src/deployment/: akash-client.js  akash-deploy.js  theta-client.js  theta-streamer.js
src/frontend-api/: channels.js  (+1 more)
(+22 files in other folders)
